Fixes spacing for captions under video

--- a/app/_scss/pages/_blog.scss
+++ b/app/_scss/pages/_blog.scss
@@ -74,7 +74,8 @@
 
 				figure {
 					text-align: center;
-					margin-bottom: 0.7em;
+					margin-bottom: 0.3em;
+					margin-top: 1.1em;
 
 					img, iframe {
 						width: 98%;
