--- a/app/_scss/sitewide/_base.scss
+++ b/app/_scss/sitewide/_base.scss
@@ -96,12 +96,11 @@ figure.video {
 	position: relative;
 	width: 100%; height: 0;
 	padding-bottom: 57%;
-	margin-bottom: 4.8em !important;
 
 	figcaption {
 		text-align: center;
 		position: absolute;
-		top: 103%;
+		top: 105%;
 		width: 100%;
 	}
 
@@ -109,6 +108,10 @@ figure.video {
 		position: absolute; top: 0; left: 0;
 		width: 100%; height: 100%;
 	}
+}
+
+figure.with-caption {
+	margin-bottom: 4.5em !important;
 }
 
 figure.video.ratio-54 {
